@@ -1,3 +1,6 @@
+5/2/13
+  Overlap master/stack borders in vertical & horizontal tiling modes
+
 27/1/13
   Fix for booting into horizontal mode failing to map windows
    correctly
